--- a/search/index.html
+++ b/search/index.html
@@ -47,9 +47,11 @@
         <a class="dropdown-toggle nav-link"
             data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Community</a>
         <ul class="dropdown-menu"><li class="nav-item">
-        <a href="/pages/memory/" class="nav-link">For GLAM sector</a>
+        <a href="/pages/developer/" class="nav-link">For developers</a>
     </li><li class="nav-item">
-        <a href="/pages/researcher/" class="nav-link">For the researchers</a>
+        <a href="/pages/memory/" class="nav-link">For memory institutions</a>
+    </li><li class="nav-item">
+        <a href="/pages/researcher/" class="nav-link">For researchers</a>
     </li><li class="nav-item">
         <a href="/pages/getting-started/" class="nav-link">Getting Started</a>
     </li><li class="nav-item">
@@ -58,8 +60,6 @@
         <a href="/pages/how-to-contribute/" class="nav-link">How to Contribute</a>
     </li><li class="nav-item">
         <a href="/pages/community-meetings/" class="nav-link">Community Meetings</a>
-    </li><li class="nav-item">
-        <a href="/map/" class="nav-link">TEI Publisher Registry</a>
     </li></ul>
     </li><li class="nav-item dropdown">
         <a class="dropdown-toggle nav-link"
