--- a/pages/developer/index.html
+++ b/pages/developer/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEI Publisher Registry</title>
+    <title>Developers</title>
     <meta name="description" content="e-editiones – Society for Scholarly Digital Editions">
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
@@ -43,7 +43,7 @@
         <a class="dropdown-toggle nav-link"
             data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Community</a>
         <ul class="dropdown-menu"><li class="nav-item">
-        <a href="/pages/developer/" class="nav-link">For developers</a>
+        <a href="/pages/developer/" class="nav-link active">For developers</a>
     </li><li class="nav-item">
         <a href="/pages/memory/" class="nav-link">For memory institutions</a>
     </li><li class="nav-item">
@@ -101,9 +101,13 @@
 
 <main class="container tmpl-post">
     
-    <h1>TEI Publisher Registry</h1>
-    <p>If your are using TEI Publisher, please let us know. Send us the title of your edition, a postal address, url, email and a very short description: <a href="mailto:info@e-editiones.org">info@e-editiones.org</a>.</p>
-<p>[put_wpgm id=2]</p>
+    <h1>Developers</h1>
+    <p>If you are a developer working with humanities scholars or in publishing, this is the right place.</p>
+<figure><img src="/img/christin-hume-Hcfwew744z4-unsplash.jpg" alt=""></figure>
+<blockquote>
+<p>why reinvent the wheel?</p>
+</blockquote>
+<p>...</p>
 
 </main>
 
