deploy: 7bb6e6e75f2ba3e1bc3b399839578c8a16c016b0

--- a/404.html
+++ b/404.html
@@ -186,7 +186,7 @@
 </div>
         </div>
         <div class="row gx-lg-5">
-            <div class="col"><h1>Content not found.</h1>
+            <div class="col"><h1 id="content-not-found." tabindex="-1">Content not found.</h1>
 <p>Go <a href="/">home</a>.</p>
 </div>
             <aside class="col-md-4">
