--- a/pages/how-to-become-a-member/index.html
+++ b/pages/how-to-become-a-member/index.html
@@ -106,11 +106,11 @@
 <p>re-using components, pooling resources and sharing best practices benefits everyone in the community and ensures our projects remain online and maintained for the decades to come</p>
 </blockquote>
 <p>To become a member please contact <a href="mailto:info@e-editiones.org">info@e-editiones.org</a>.</p>
-<h3>Institutional membership</h3>
+<h3 id="institutional-membership" tabindex="-1">Institutional membership</h3>
 <p>Do you represent a legal entity in the broadly understood research, academic or cultural heritage domains? With institutional membership contribution available from CHF 500.– you will benefit from full membership rights and receive e-editiones support in funding proposals.</p>
-<h3>Support membership</h3>
+<h3 id="support-membership" tabindex="-1">Support membership</h3>
 <p>Projects and parts of larger organizations unable to have their formal representative proceed with the institutional membership can nevertheless benefit from a special &quot;support&quot; relationship with the society available from CHF 600.– Equivalent in all but name to the institutional membership.</p>
-<h3>Individual membership</h3>
+<h3 id="individual-membership" tabindex="-1">Individual membership</h3>
 <p>Natural persons membership fee is reduced to CHF 50.– In justified cases individual membership fee may be waived at discretion of the board.</p>
 <figure><img src="/img/krakenimages-Y5bvRlcCx8k-unsplash.jpg" alt=""><figcaption>Photo by <a href="https://unsplash.com/@krakenimages?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">krakenimages</a> on <a href="https://unsplash.com/s/photos/member?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></figcaption></figure>
 <p>‍</p>
