--- a/pages/members/index.html
+++ b/pages/members/index.html
@@ -102,7 +102,7 @@
 <main class="container tmpl-post">
     
     <h1>Members</h1>
-    <h2>Institutional Members</h2>
+    <h2 id="institutional-members" tabindex="-1">Institutional Members</h2>
 <ul>
 <li><a href="https://www.dh.unibe.ch/">Digital Humanities</a>/<a href="https://www.wbkolleg.unibe.ch/">Walter Benjamin Kolleg</a> der Universität Bern</li>
 <li><a href="https://isllv.zrc-sazu.si/en/predstavitev#v">Institute of Slovenian Literature and Literary studies</a>, Research Centre of the Slovenian Academy of Sciences and Arts, Ljubljana</li>
@@ -117,7 +117,7 @@
 <li><a href="http://existsolutions.com/">eXist Solutions GmbH</a>, Lenzkirch/Berlin</li>
 <li><a href="https://gbl-gubler.ch/">GBL Gubler AG</a>, Frauenfeld</li>
 </ul>
-<h2>Individual Members</h2>
+<h2 id="individual-members" tabindex="-1">Individual Members</h2>
 <ul>
 <li><a href="https://newtfire.org">Elisa Beshero-Bondar</a>, PhD, Program Chair of Digital Media, Arts, and Technology Professor of Digital Humanities | Director of the <a href="https://sites.psu.edu/psudhlab/">Digital Humanities Lab at Penn State Erie</a>, the Behrend College, Member of the TEI Technical Council</li>
 <li><a href="https://hcommons.org/members/pibburns/">Philip R. «Pib» Burns</a>, Senior Developer, Research Computing Services Northwestern University</li>
