--- a/pages/board/index.html
+++ b/pages/board/index.html
@@ -112,9 +112,9 @@
 <li>lic. phil. Arman Weidenmann, <a href="https://stadtarchiv.ch/">Stadtarchiv der Ortsbürgergemeinde der Stadt St.Gallen</a></li>
 <li>Dr. <a href="https://joewiz.org/">Joseph Wicentowski</a>, Historian, <a href="https://history.state.gov/">Office of the Historian</a>, U.S. Department of State</li>
 </ul>
-<h2>Contact</h2>
+<h2 id="contact" tabindex="-1">Contact</h2>
 <p><a href="mailto:info@e-editiones.org">info@e-editiones.org</a></p>
-<h3>Postal Address</h3>
+<h3 id="postal-address" tabindex="-1">Postal Address</h3>
 <p>e-editiones<br>
 c/o Stadtarchiv der Ortsbürgergemeinde St.Gallen<br>
 Notkerstrasse 22<br>
