--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -105,7 +105,7 @@
     <p>e-editiones is an international non profit society consisting of owners of smaller and larger edition projects, cultural heritage institutions, and individual researchers. Its goal is to empower digital editions of cultural, scientific, and artistic works by promoting open standards related to digital editions and advancing open source applications based on them.</p>
 <p>While digital editions may differ considerably in structure and content, there is a large overlap in terms of the basic technical functionality that each edition must offer. Starting point for the initiators of the Society is their shared use of <a href="https://teipublisher.com/index.html">TEI Publisher</a> – which originated from a project of the TEI community. This toolbox allows editions to reuse existing building blocks in a modular way.</p>
 <p>However, such software requires a constant exchange between developers and users, who are familiar with the technical requirements of their respective edition projects. The Society would like to put this exchange of information as well as the communication between edition projects on a firm footing.</p>
-<h2>Focus of the Society</h2>
+<h2 id="focus-of-the-society" tabindex="-1">Focus of the Society</h2>
 <ul>
 <li>Initiating and coordinating developments in open source software for digital editions</li>
 <li>Promotion of information exchange and communication between the stakeholders involved</li>
