--- a/page-list/index.html
+++ b/page-list/index.html
@@ -128,7 +128,7 @@
         <strong>open standards</strong> and <strong>community collaboration</strong>.
         Curious?</p>
     </div>
-    <div class="row justify-content-md-center m-2 gx-lg-2">
+    <div class="row justify-content-md-center m-2 gx-lg-2 gy-2">
         <div class="col">
             <a href="pages/researcher/" class="shortcut btn">
             <img src="img/poet-svgrepo-com.svg" height="32">
@@ -163,7 +163,7 @@
         <strong>open standards</strong> and <strong>community collaboration</strong>.
         Curious?</p>
     </div>
-    <div class="row justify-content-md-center m-2 gx-lg-2">
+    <div class="row justify-content-md-center m-2 gx-lg-2 gy-2">
         <div class="col">
             <a href="pages/researcher/" class="shortcut btn">
             <img src="img/poet-svgrepo-com.svg" height="32">
@@ -186,7 +186,7 @@
 </div>
         </div>
         <div class="row gx-lg-5">
-            <div class="col"><table>
+            <div class="col-md-8"><table>
   <thead>
     <tr>
       <th>URL</th>
