deploy: bb34af36f9aeebfe8537a818875eb1cf21509a61

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <div class="col-md-8">
 <section class="blog">
   
-  <h3>Latest Posts</h3>
+  <h3>Latest Posts <small><a href="/posts/">See all</a></small></h3>
 
   
   
