--- a/page-list/3/index.html
+++ b/page-list/3/index.html
@@ -114,18 +114,18 @@
     <div>
         <div class="hero">
             <h1><span class="initial">e</span>ditions with <span class="initial">f</span>uture</h1>
-            <p class="m-2">rooted in standards, built by a community, meant to last</p>
+            <p class="m-2">rooted in standards, built by the community, meant to last</p>
             <div>
-                <button class="btn btn-warning">Donate</button>
                 <a href="pages/how-to-become-a-member/" class="btn btn-warning">Join</a>
+                <button class="btn btn-warning">Donate</button>
             </div>
         </div>
         <div class="container d-none d-lg-block">
         <div class="intro-text container">
     <div class="row justify-content-md-center m-3">
-        <p>We are an <strong>international non profit society</strong> gathering 
+        <p>We are an <strong>international non profit society</strong> bringing together 
         edition projects, cultural heritage institutions, 
-        scholars, and developers<br/>to <strong>empower</strong> digital projects by promoting 
+        scholars, and developers to <strong>empower</strong> digital projects by promoting 
         <strong>open standards</strong> and <strong>community collaboration</strong>.
         Curious?</p>
     </div>
@@ -139,7 +139,7 @@
         <div class="col">
             <a href="pages/memory/" class="shortcut btn">
                 <img src="img/university-svgrepo-com.svg" height="32">
-                <span>Memory institutions</span>
+                <span>Cultural heritage institutions</span>
             </a>
         </div>
         <div class="col">
@@ -158,9 +158,9 @@
         <div class="row d-lg-none">
             <div class="intro-text container">
     <div class="row justify-content-md-center m-3">
-        <p>We are an <strong>international non profit society</strong> gathering 
+        <p>We are an <strong>international non profit society</strong> bringing together 
         edition projects, cultural heritage institutions, 
-        scholars, and developers<br/>to <strong>empower</strong> digital projects by promoting 
+        scholars, and developers to <strong>empower</strong> digital projects by promoting 
         <strong>open standards</strong> and <strong>community collaboration</strong>.
         Curious?</p>
     </div>
@@ -174,7 +174,7 @@
         <div class="col">
             <a href="pages/memory/" class="shortcut btn">
                 <img src="img/university-svgrepo-com.svg" height="32">
-                <span>Memory institutions</span>
+                <span>Cultural heritage institutions</span>
             </a>
         </div>
         <div class="col">
