--- a/pages/documentation/index.html
+++ b/pages/documentation/index.html
@@ -170,8 +170,8 @@
         </div>
     </main>
 </pb-page>
-<!--script type="module" src="https://cdn.jsdelivr.net/npm/@teipublisher/pb-components@latest/dist/pb-components-bundle.js"></script-->
-<script type="module" src="http://localhost:8000/src/pb-components-bundle.js"></script>
+<script type="module" src="https://cdn.jsdelivr.net/npm/@teipublisher/pb-components@latest/dist/pb-components-bundle.js"></script>
+<!--script type="module" src="http://localhost:8000/src/pb-components-bundle.js"></script-->
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
       <script src="/scripts/common.js"></script>
