--- a/page-list/4/index.html
+++ b/page-list/4/index.html
@@ -121,13 +121,9 @@
             </div>
         </div>
         <div class="container d-none d-lg-block">
-        <div class="intro-text container">
-    <div class="row justify-content-md-center m-3">
-        <p>We are an <strong>international non profit society</strong> bringing together 
-        edition projects, cultural heritage institutions, 
-        scholars, and developers to <strong>empower</strong> digital projects by promoting 
-        <strong>open standards</strong> and <strong>community collaboration</strong>.
-        Curious?</p>
+        <div class="intro-text container mt-2">
+    <div class="row justify-content-md-center">
+        <p>We are an <strong>international non profit society</strong> bringing together edition projects, cultural heritage institutions, scholars, and developers to <strong>empower</strong> digital projects by promoting <strong>open standards</strong> and <strong>community collaboration</strong> – with the ultimate goal of helping to sustain editions far into the future.</p>
     </div>
     <div class="row justify-content-md-center m-2 gx-lg-2 gy-2">
         <div class="col">
@@ -156,13 +152,9 @@
 <main class="home">
     <div class="container">
         <div class="row d-lg-none">
-            <div class="intro-text container">
-    <div class="row justify-content-md-center m-3">
-        <p>We are an <strong>international non profit society</strong> bringing together 
-        edition projects, cultural heritage institutions, 
-        scholars, and developers to <strong>empower</strong> digital projects by promoting 
-        <strong>open standards</strong> and <strong>community collaboration</strong>.
-        Curious?</p>
+            <div class="intro-text container mt-2">
+    <div class="row justify-content-md-center">
+        <p>We are an <strong>international non profit society</strong> bringing together edition projects, cultural heritage institutions, scholars, and developers to <strong>empower</strong> digital projects by promoting <strong>open standards</strong> and <strong>community collaboration</strong> – with the ultimate goal of helping to sustain editions far into the future.</p>
     </div>
     <div class="row justify-content-md-center m-2 gx-lg-2 gy-2">
         <div class="col">
