--- a/pages/memory/index.html
+++ b/pages/memory/index.html
@@ -103,7 +103,7 @@
         <div class="">
             <h1>Libraries, Archives, Cultural Heritage and Memory Institutions</h1>
             <p>Do you work in an archive or library and got a truckload of data dumps from terminated projects? Are you responsible for a digital humanities initiative and funding is about to dry out? Worried about future maintenance and long-term prospects? Asking yourself <strong>&quot;What now?!&quot;</strong>. This community has the answers you need.</p>
-<figure><img src="/img/aditya-dvPd91Pdh5c-unsplash.jpg" alt=""></figure>
+<figure><img src="/img/aditya-dvPd91Pdh5c-unsplash.jpg" alt=""><figcaption>Photo by <a href="https://unsplash.com/ja/@adidhotre?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Aditya</a> on <a href="https://unsplash.com/s/photos/archive?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></figcaption></figure>
 <blockquote>
 <p>rooted in standards, built by the community, meant to last</p>
 </blockquote>
@@ -111,7 +111,6 @@
 <p>Imagine a universe, where a digital publication can be assembled very much <strong>like playing with Lego</strong> blocks, and, like Lego, it <strong>will fit with other collections</strong> who embrace the same design principles, however different they may be in other respects. From ancient inscriptions, correspondence, writer's notebooks to lexicon entries or anything else, following this design - modular and flexible, yet with solid foundation in standards - results in data and application packages that can be easily created and distributed, hosted on standard infrastructure and ready to be plugged into overarching search and discovery system as well as expose standardized programming interface (API) for interactions with external resources.</p>
 <p>At the same time, all resources are based on human-readable and well documented formats (like TEI XML), ultimately fitting for <strong>long-term</strong> safe-keeping but also allowing for single-source transformations into a range output formats (web, ebook, pdf) right here and now.</p>
 <p>In the ideal world, projects requesting to hand over their resources to a memory institution would already follow such a modular and standardized design. Nevertheless, for legacy collections, it is still feasible to transform the source material at relatively low cost into required form, thus saving the research data and giving it a new lease of life and sound prospects for the future.</p>
-<p>Photo by <a href="https://unsplash.com/ja/@adidhotre?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Aditya</a> on <a href="https://unsplash.com/s/photos/archive?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
 
         </div>
         
