--- a/pages/researcher/index.html
+++ b/pages/researcher/index.html
@@ -103,7 +103,7 @@
         <div class="">
             <h1>Editors &amp; Researchers</h1>
             <p>If you are a researcher working with texts or wanting to publish <strong>any kind of textual material</strong>, this is the right place.</p>
-<figure><img src="/img/zoltan-tasi-CLJeQCr2F_A-unsplash.jpg" alt=""></figure>
+<figure><img src="/img/zoltan-tasi-CLJeQCr2F_A-unsplash.jpg" alt=""><figcaption>Photo by <a href="https://unsplash.com/@zoltantasi?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="unsplash">Zoltan Tasi</a> on <a href="https://unsplash.com/s/photos/power?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="unsplash">Unsplash</a></figcaption></figure>
 <blockquote>
 <p>power to the editor</p>
 </blockquote>
@@ -111,7 +111,7 @@
 <blockquote>
 <p>Documents worth encoding in TEI are different (...) — but not that different, and eight out of ten probably will benefit from staying within the confines of a well thought-out standard schema and its surrounding processing rules. And even the two that don’t, may benefit from staying within that standard schema as far as possible. — Martin Mueller on <em>TEI Simple</em> 2014</p>
 </blockquote>
-<p>In time, building upon various community standards, partial solutions, and interdisciplinary experience we managed to create a <strong>flexible</strong> and <strong>sustainable ecosystem</strong> that <strong>empowers the editor</strong> and puts <strong>interoperability, longevity and best practices in the center</strong>. TEI Processing Model and <a href="https://teipublisher.com/exist/apps/tei-publisher">TEI Publisher</a> lie at the heart of this open source universe. Long story short, we welcome you to <strong>join our community</strong> and <strong>explore</strong> how tools and workflows we create and develop can <strong>help you</strong> to work focusing on the research and not technicalities.</p>
+<p>In time, building upon various community standards, partial solutions, and interdisciplinary experience we managed to create a <strong>flexible</strong> and <strong>sustainable ecosystem</strong> that <strong>empowers the editor</strong> and puts <strong>interoperability, longevity and best practices in the center</strong>. The TEI Processing Model and <a href="https://teipublisher.com/exist/apps/tei-publisher">TEI Publisher</a> lie at the heart of this open source universe. Long story short, we welcome you to <strong>join our community</strong> and <strong>explore</strong> how tools and workflows we create and develop can <strong>help you</strong> to work focusing on the research and not technicalities.</p>
 <blockquote>
 <p>re-using components, pooling resources and sharing best practices benefits everyone in the community and ensures our projects remain online and maintained for the decades to come</p>
 </blockquote>
@@ -120,7 +120,6 @@
 <p>rooted in standards, built by the community, meant to last</p>
 </blockquote>
 <p>More than that, your publication can be assembled very much <strong>like playing with Lego</strong> blocks, and, like Lego, it <strong>will still fit with others</strong> who embrace the same basic principles, however different they may look and feel on the surface. As a side effect, without any extra effort on your part, you end up with a kind of <strong>survival kit</strong>, resilient data and application package fit for <strong>easy distribution, long-term archiving</strong> but also future hosting and <strong>maintenance</strong> through infrastructure on institutional and national level.</p>
-<p>Photo by <a href="https://unsplash.com/@zoltantasi?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="unsplash">Zoltan Tasi</a> on <a href="https://unsplash.com/s/photos/power?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="unsplash">Unsplash</a></p>
 
         </div>
         
