deploy: ee84a1534906be5235b657a44216ed9f7a1567cf

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/assets/css/prism-diff.css">
     <link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="e-editiones">
     <link rel="alternate" href="/feed/feed.json" type="application/json" title="e-editiones">
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    
     
   </head>
   <body>
@@ -462,17 +462,7 @@
   
 </div>
 </section>
-<script>
-  if (window.netlifyIdentity) {
-    window.netlifyIdentity.on("init", user => {
-      if (!user) {
-        window.netlifyIdentity.on("login", () => {
-          document.location.href = "/admin/";
-        });
-      }
-    });
-  }
-</script></div>
+</div>
             <aside class="col-md-4">
                 <form action="/search" class="search-form">
     <div class="input-group">
