deploy: 9651162859300a6653f223aca92da178bc3e79dd

--- a/pages/board/index.html
+++ b/pages/board/index.html
@@ -139,4 +139,5 @@ CH-9000 St. Gallen</p>
       <script src="/assets/scripts/common.js"></script>
       
   </body>
+  <a rel="me" href="https://social.e-editiones.org/@eeditiones">Mastodon</a>
 </html>
