--- a/pages/statuten-des-vereins-e-editiones-german/index.html
+++ b/pages/statuten-des-vereins-e-editiones-german/index.html
@@ -184,4 +184,5 @@ a) Förderung und Koordination von Entwicklungen im Open Source Bereich für wis
       <script src="/assets/scripts/common.js"></script>
       
   </body>
+  <a rel="me" href="https://social.e-editiones.org/@eeditiones">Mastodon</a>
 </html>
