--- a/map/index.html
+++ b/map/index.html
@@ -392,4 +392,5 @@ The textual part of the treatise will be encoded in TEI and the TEI Publisher wi
       <script src="/assets/scripts/common.js"></script>
       
   </body>
+  <a rel="me" href="https://social.e-editiones.org/@eeditiones">Mastodon</a>
 </html>
