--- a/page-list/4/index.html
+++ b/page-list/4/index.html
@@ -547,4 +547,5 @@
       <script src="/assets/scripts/common.js"></script>
       
   </body>
+  <a rel="me" href="https://social.e-editiones.org/@eeditiones">Mastodon</a>
 </html>
