deploy: dd39fec07825af7d9d6df302653583909ca47722

--- a/pages/members/index.html
+++ b/pages/members/index.html
@@ -126,6 +126,7 @@
 <li>Sulamith Gehr, <a href="https://ub.unibas.ch/bernoulli/index.php/Hauptseite">Basler Edition der Bernoulli-Briefwechsel</a></li>
 <li><a href="https://ifaa.uni-greifswald.de/hansen/">Mascha Hansen</a>, Dr., Lecturer, Department of British and North American Studies (IfAA), University of Greifswald</li>
 <li>Pauline Jacsont, Research Associate in Digital Humanities, project «<a href="https://desenrollandoelcordel.unige.ch/inicio.html">Desenrollando el cordel</a>», University of Geneva</li>
+<li>Boris Lehečka, freelance developer (Persian-Czech Dictionary, digital edition of J. A. Comenius’s work)</li>
 <li><a href="http://staff.germanistik.rub.de/lechtermann/">Prof. Dr. Christina Lechtermann</a>, Ruhr-Universität Bochum, Fakultät für Philologie Germanistisches Institut</li>
 <li><a href="https://www.geschichte.uni-wuppertal.de/de/personen/digital-humanities/stephan-makowski-ma.html">Stephan Makowski</a>, Wissenschaftlicher Mitarbeiter in Digital Humanities, DFG-Projekt &quot;Index Librorum Civitatum&quot;, Bergische Universität Wuppertal</li>
 <li><a href="https://dmaus.name/">David Maus</a>, Leiter der Abteilung Forschung und Entwicklung. Staats- und <a href="https://www.sub.uni-hamburg.de/startseite.html">Universitätsbibliothek Hamburg Carl von Ossietzky</a></li>
