deploy: 49de7fc40f7bf227d1a660baa8db867cab5c86af

--- a/page-list/2/index.html
+++ b/page-list/2/index.html
@@ -259,8 +259,8 @@
     <td>tei-publisher-lib 3: Print CSS and other new features</td>
   </tr>
   <tr>
-    <td><a href="/admin/"><code>/admin/</code></a></td>
-    <td></td>
+    <td><a href="/posts/community-solomon-project/"><code>/posts/community-solomon-project/</code></a></td>
+    <td>The Salomon project - complex medieval sources and the potential of digital presentation</td>
   </tr>
   </tbody>
 </table>
