--- a/page-list/5/index.html
+++ b/page-list/5/index.html
@@ -183,6 +183,10 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/tags/tei-vanilla/"><code>/tags/tei-vanilla/</code></a></td>
+    <td>Tagged “tei vanilla”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/semantic-encoding/"><code>/tags/semantic-encoding/</code></a></td>
     <td>Tagged “semantic-encoding”</td>
   </tr>
@@ -193,10 +197,6 @@
   <tr>
     <td><a href="/tags/markdown/"><code>/tags/markdown/</code></a></td>
     <td>Tagged “markdown”</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/community-solomon-project/"><code>/posts/community-solomon-project/</code></a></td>
-    <td>The Salomon project - complex medieval sources and the potential of digital presentation</td>
   </tr>
   <tr>
     <td><a href="/posts/community-event-ssrq/"><code>/posts/community-event-ssrq/</code></a></td>
