--- a/page-list/3/index.html
+++ b/page-list/3/index.html
@@ -183,6 +183,10 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/admin/"><code>/admin/</code></a></td>
+    <td></td>
+  </tr>
+  <tr>
     <td><a href="/posts/"><code>/posts/</code></a></td>
     <td>Archive</td>
   </tr>
@@ -257,10 +261,6 @@
   <tr>
     <td><a href="/tags/advanced/"><code>/tags/advanced/</code></a></td>
     <td>Tagged “advanced”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/beginner/"><code>/tags/beginner/</code></a></td>
-    <td>Tagged “beginner”</td>
   </tr>
   </tbody>
 </table>
