deploy: c75ce975955cc1237154b2a0c060b58dfff6b424

--- a/page-list/3/index.html
+++ b/page-list/3/index.html
@@ -183,6 +183,10 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/posts/community-event-ssrq/"><code>/posts/community-event-ssrq/</code></a></td>
+    <td>Swiss Law Sources – Lessons learned from using TEIPublisher for &gt; 5 years</td>
+  </tr>
+  <tr>
     <td><a href="/admin/"><code>/admin/</code></a></td>
     <td></td>
   </tr>
@@ -257,10 +261,6 @@
   <tr>
     <td><a href="/tags/tutorial/"><code>/tags/tutorial/</code></a></td>
     <td>Tagged “tutorial”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/advanced/"><code>/tags/advanced/</code></a></td>
-    <td>Tagged “advanced”</td>
   </tr>
   </tbody>
 </table>
