--- a/page-list/4/index.html
+++ b/page-list/4/index.html
@@ -183,6 +183,10 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/tags/advanced/"><code>/tags/advanced/</code></a></td>
+    <td>Tagged “advanced”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/beginner/"><code>/tags/beginner/</code></a></td>
     <td>Tagged “beginner”</td>
   </tr>
@@ -257,10 +261,6 @@
   <tr>
     <td><a href="/tags/mei/"><code>/tags/mei/</code></a></td>
     <td>Tagged “mei”</td>
-  </tr>
-  <tr>
-    <td><a href="/tags/tei-publisher-lib/"><code>/tags/tei-publisher-lib/</code></a></td>
-    <td>Tagged “tei-publisher-lib”</td>
   </tr>
   </tbody>
 </table>
