--- a/page-list/5/index.html
+++ b/page-list/5/index.html
@@ -183,6 +183,10 @@
   </thead>
   <tbody>
   <tr>
+    <td><a href="/tags/tei-publisher-lib/"><code>/tags/tei-publisher-lib/</code></a></td>
+    <td>Tagged “tei-publisher-lib”</td>
+  </tr>
+  <tr>
     <td><a href="/tags/tei-vanilla/"><code>/tags/tei-vanilla/</code></a></td>
     <td>Tagged “tei vanilla”</td>
   </tr>
@@ -197,10 +201,6 @@
   <tr>
     <td><a href="/tags/markdown/"><code>/tags/markdown/</code></a></td>
     <td>Tagged “markdown”</td>
-  </tr>
-  <tr>
-    <td><a href="/posts/community-event-ssrq/"><code>/posts/community-event-ssrq/</code></a></td>
-    <td>Swiss Law Sources – Lessons learned from using TEIPublisher for &gt; 5 years</td>
   </tr>
   <tr>
     <td><a href="/posts/building-a-political-txt-edition-with-tei-publisher/"><code>/posts/building-a-political-txt-edition-with-tei-publisher/</code></a></td>
