deploy: 538e352722c0e611577a7af4ca65249e6e8613b4

--- a/pages/meeting-minutes/index.html
+++ b/pages/meeting-minutes/index.html
@@ -102,11 +102,11 @@
             <h1>Meeting Minutes</h1>
             <h3 id="assembly-2023-2nd-may-2023-(16-h-cest)" tabindex="-1">Assembly 2023 2nd May 2023 (16 h CEST)</h3>
 <ul>
-<li>Invitation/Agenda - 3nd AGM of e-editiones (german, english) <a href="/2023/...">PDF</a></li>
-<li>[ad 3] Protokoll der Sitzung vom 5.4.2022 (deutsch) <a href="/resources/2022/Protokoll-der-2.-GV-e-editiones-1.pdf">Protokoll der 2. GV e-editiones</a></li>
+<li>Invitation/Agenda - 3nd AGM of e-editiones (german, english) <a href="/resources/2023/Invitation_Agenda_3rdAGM e-editiones.pdf">PDF</a></li>
+<li>[ad 3] Protokoll der Sitzung vom 5.4.2022 (german) <a href="/resources/2022/Protokoll-der-2.-GV-e-editiones-1.pdf">Protokoll der 2. GV e-editiones</a></li>
 <li>[ad 4] <a href="/posts/newsletter-2023-1/">Annual Report (english)/Newsletter 2023/1</a></li>
 <li>[ad 5] Annual Accounts 2022 <a href="/resources/2023/accounting-2022.pdf">PDF</a> revision <a href="/resources/2023/Revisionsbericht_e_editiones_2022.pdf">PDF</a></li>
-<li>[ad 6] <a href="/resources/2023/budget-2023.pdf">Budget 2023</a></li>
+<li>[ad 6] <a href="/resources/2023/budget_2023.pdf">Budget 2023</a></li>
 </ul>
 <h3 id="assembly-2022-5th-april-2022" tabindex="-1">Assembly 2022 5th April 2022</h3>
 <ul>
@@ -115,7 +115,6 @@
 <li>[ad 4] <a href="/posts/newsletter-2022-1/">Annual Report (english)/Newsletter 2022/1</a></li>
 <li>[ad 5] Annual Accounts 2021 <a href="/resources/2022/05a_Bilanz_Erfolgsrechung_2021.pdf">PDF</a> and revision <a href="/resources/2022/05b_2021_Revisionsbericht_e-editiones.pdf">PDF</a></li>
 <li>[ad 6] Budget 2022 <a href="/resources/2022/06_budget_e-editiones_2022.pdf">PDF</a></li>
-<li>Protokoll der Sitzung vom 5.4.2022 (german) <a href="/resources/2022/Protokoll-der-2.-GV-e-editiones-1.pdf">PDF</a></li>
 </ul>
 <h3 id="assembly-2021-1st-march-2021" tabindex="-1">Assembly 2021 1st March 2021</h3>
 <ul>
